service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopslab5-service
spec:
  type: ClusterIP
  selector:
    app: devopslab5
  ports:
  - port: 80
    targetPort: 80
