ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopslab5
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: devopslab5
      http:
        paths:
          - backend:
              service:
                name: devopslab5-service
                port:
                  name: http
            path: /
            pathType: Prefix
